--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -1,10 +1,22 @@
 ---
 
 #1.сгенерить ключ
-# govpn-verifier -key /tmp/00
+#1.1 создать /tmp/govpn_key
+- name: Generate /tmp/govpn_key
+  shell: openssl rand -base64 48 > /tmp/govpn_key
+
+#1.2 запустить govpn-verifier -key /tmp/govpn_key
+- name: Generate govpn key
+  shell: govpn-verifier -key /tmp/govpn_key
+  register: govpn__key_raw
+#1.3 удалить /tmp/govpn_key
+- name: rm /tmp/govpn_key
+  file:
+    path: /tmp/govpn_key
+    state: absent
 #2. настраиваем запуск сервере
 #3. настраиваем клиентов
 
-
+- debug: msg={{ govpn__key_raw }}
 
 ## vim: foldmethod=marker:tabstop=2:shiftwidth=2:softtabstop=2
