--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -1,22 +1,38 @@
 ---
 
-#1.сгенерить ключ
-#1.1 создать /tmp/govpn_key
 - name: Generate /tmp/govpn_key
   shell: openssl rand -base64 48 > /tmp/govpn_key
 
-#1.2 запустить govpn-verifier -key /tmp/govpn_key
 - name: Generate govpn key
   shell: govpn-verifier -key /tmp/govpn_key
   register: govpn__key_raw
-#1.3 удалить /tmp/govpn_key
+
 - name: rm /tmp/govpn_key
   file:
     path: /tmp/govpn_key
     state: absent
+
+- name: set govpn__key_(server|client)
+  set_fact:
+    govpn__key_server: "{{ govpn__key_raw.stdout_lines[0] }}"
+    govpn__key_client: "{{ govpn__key_raw.stdout_lines[1] }}"
+
+- name: generate
+  template:
+    src: "etc/govpn/conf.d/{{ item.type | default('default') }}.conf.j2"
+    dest: '/etc/govpn/conf.d/{{ item.name }}.conf'
+    owner: 'root'
+    group: 'root'
+    mode: '0644'
+  with_items:
+    - '{{ rspamd__conf_d }}'
+  delegate_to: "{{ groups['director'][0] }}"
+
 #2. настраиваем запуск сервере
 #3. настраиваем клиентов
 
 - debug: msg={{ govpn__key_raw }}
+- debug: msg={{ govpn__key_server }}
+- debug: msg={{ govpn__key_client }}
 
 ## vim: foldmethod=marker:tabstop=2:shiftwidth=2:softtabstop=2
