add install make && fix ansuble version

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -18,6 +18,7 @@
   with_flattened:
     - 'git'
     - 'golang-go'
+    - 'make'
   when: govpn__version != govpn__version_install
 
 - name: git clone
