--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,15 +1,6 @@
 ---
 
-- name: install
-  include: install.yml
-  when: role_govpn_register_install is not defined
-
-- name: install register
-  set_fact:
-    role_govpn_register_install: ""
-  when: role_govpn_register_install is not defined
-
-- name: config
-  include: config.yml
+- include: install.yml
+- include: config.yml
 
 ## vim: foldmethod=marker:tabstop=2:shiftwidth=2:softtabstop=2
